--- a/assignment/Experiment1.ipynb
+++ b/assignment/Experiment1.ipynb
@@ -9,9 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Everyone !!!\n",
+      "Hello\n",
+      "World\n",
+      "Hello\n",
+      "\t\tWorld\n",
+      "' Rohit' s date of birth is 12\\05\\1999'\n"
+     ]
+    }
+   ],
    "source": [
     "# a)\n",
     "print(\"Hello Everyone !!!\")\n",
@@ -140,7 +153,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.1"
   }
  },
