Do experiment 3,4 and lab 4

--- a/assignment/Experiment1.ipynb
+++ b/assignment/Experiment1.ipynb
@@ -48,9 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n"
+     ]
+    }
+   ],
    "source": [
     "x = \"Hello\"\n",
     "print(x)"
@@ -65,9 +73,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "10.5\n",
+      "Hello\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "integer_var = 10\n",
     "float_var = 10.5\n",
@@ -89,9 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John Doe\n"
+     ]
+    }
+   ],
    "source": [
     "a = \"John\"\n",
     "b = \"Doe\"\n",
@@ -107,9 +134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "George (woody) Washington\n"
+     ]
+    }
+   ],
    "source": [
     "first_name = \"George\"\n",
     "last_name = \"Washington\"\n",
@@ -126,9 +161,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAME : NIKUNJ BANSAL\n",
+      "SAP ID : 500069944\n",
+      "DATE OF BIRTH : 13 Oct 1999\n",
+      "ADDRESS : UPES\n",
+      "Bidholi Campus\n",
+      "Pincode : 248007\n",
+      "Programme : AI & ML\n",
+      "Semester : 2\n"
+     ]
+    }
+   ],
    "source": [
     "name = \"NIKUNJ BANSAL\"\n",
     "sap_id = \"500069944\"\n",
@@ -144,6 +194,13 @@
     "print(f\"Programme : {programme}\")\n",
     "print(f\"Semester : {semester}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
