--- a/assignment/Experiment2.ipynb
+++ b/assignment/Experiment2.ipynb
@@ -9,9 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Addition: 16\n",
+      "Multiplication: 63\n",
+      "Division: 1.2857142857142858\n",
+      "Subtraction: 2\n"
+     ]
+    }
+   ],
    "source": [
     "x = 9\n",
     "y = 7\n",
@@ -36,9 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area of the circle: 50.26548245743669\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -56,9 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of (x+y)*(x+y): 49\n"
+     ]
+    }
+   ],
    "source": [
     "x = 4\n",
     "y = 3\n",
@@ -75,9 +102,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of the hypotenuse: 5.830951894845301\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -96,9 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simple Interest: 320.0\n"
+     ]
+    }
+   ],
    "source": [
     "principal = float(input(\"Enter the principal amount: \"))\n",
     "rate = float(input(\"Enter the rate of interest: \"))\n",
@@ -116,9 +159,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area of the triangle: 11.976539567003485\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -139,9 +190,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 hours, 9 minutes, 28 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "total_seconds = int(input(\"Enter the total seconds: \"))\n",
     "hours = total_seconds // 3600\n",
@@ -159,9 +218,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After swapping: a = 6 b = 5\n"
+     ]
+    }
+   ],
    "source": [
     "a = int(input(\"Enter the first number: \"))\n",
     "b = int(input(\"Enter the second number: \"))\n",
@@ -178,9 +245,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of first 6 natural numbers: 21\n"
+     ]
+    }
+   ],
    "source": [
     "n = int(input(\"Enter the value of n: \"))\n",
     "sum_n = n * (n + 1) // 2\n",
@@ -196,9 +271,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A B A&B A|B A^B\n",
+      "0 0 0 0 0\n",
+      "0 1 0 1 1\n",
+      "1 0 0 1 1\n",
+      "1 1 1 1 0\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"A B A&B A|B A^B\")\n",
     "for A in [0, 1]:\n",
@@ -215,9 +302,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Left Shift: 10\n",
+      "Right Shift: 2\n"
+     ]
+    }
+   ],
    "source": [
     "num = int(input(\"Enter a number: \"))\n",
     "left_shift = num << 1\n",
@@ -235,9 +331,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 is in the sequence\n"
+     ]
+    }
+   ],
    "source": [
     "sequence = (10, 20, 56, 78, 89)\n",
     "number = int(input(\"Enter a number to check: \"))\n",
@@ -256,9 +360,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'s' is in the string\n"
+     ]
+    }
+   ],
    "source": [
     "string = input(\"Enter a string: \")\n",
     "char = input(\"Enter a character to check: \")\n",
@@ -267,6 +379,13 @@
     "else:\n",
     "    print(f\"'{char}' is not in the string\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
