--- a/assignment/Experiment6.ipynb
+++ b/assignment/Experiment6.ipynb
@@ -4,14 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Scan n values in range 0-3 and print the number of times each value has occurred."
+    "1. Scan n values in range 0-3 and print the number of times each value has occurred."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value 0 occurred 2 times\n",
+      "Value 1 occurred 1 times\n",
+      "Value 2 occurred 1 times\n",
+      "Value 3 occurred 1 times\n"
+     ]
+    }
+   ],
    "source": [
     "n = 5\n",
     "values = [0, 1, 2, 3, 0]\n",
@@ -27,14 +38,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Create a tuple to store n numeric values and find average of all values."
+    "2. Create a tuple to store n numeric values and find average of all values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average: 3.0\n"
+     ]
+    }
+   ],
    "source": [
     "values_tuple = (1, 2, 3, 4, 5)\n",
     "average = sum(values_tuple) / len(values_tuple)\n",
@@ -45,14 +64,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Find the score of the runner-up and print the output."
+    "3. Find the score of the runner-up and print the output."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Runner-up score: 5\n"
+     ]
+    }
+   ],
    "source": [
     "scores = [2, 3, 6, 6, 5]\n",
     "unique_scores = list(set(scores))\n",
@@ -65,14 +92,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Create a dictionary of n persons where key is name and value is city."
+    "4. Create a dictionary of n persons where key is name and value is city."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Names: ['Alice', 'Bob', 'Charlie']\n",
+      "Cities: ['New York', 'Los Angeles', 'New York']\n",
+      "Alice lives in New York\n",
+      "Bob lives in Los Angeles\n",
+      "Charlie lives in New York\n",
+      "City count: {'New York': 2, 'Los Angeles': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "persons = {'Alice': 'New York', 'Bob': 'Los Angeles', 'Charlie': 'New York'}\n",
     "# a) Display all names\n",
@@ -96,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Store details of n movies in a dictionary by taking input from the user."
+    "5. Store details of n movies in a dictionary by taking input from the user."
    ]
   },
   {
